# chirp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_ANALYSIS.md  README.md  RELEASE_NOTES_v0.1.2.md  ROADMAP.md  SECURITY.md  pyproject.toml
.cursor/plans/: demo-stream-kida-llm.plan.md  suspense-layout-support.plan.md
.cursor/rules/: view-transitions-oob.mdc
.cursor/skills/chirp-app-shell-oob/: SKILL.md
.dori/: context.json
.dori/events/: 09c1de5c.json  5ac148df.json  6de0077d.json  cb95b7e1.json
.github/workflows/: changelog.yml  ci.yml  pages.yml  python-publish.yml
benchmarks/: README.md  __init__.py  run.py  run_experiments.py  run_mixed.py
benchmarks/apps/: __init__.py  chirp_app.py  chirp_app_mixed.py  fastapi_app.py  flask_app.py
changelog.d/: +route-contract-meta.fixed.md  +scaffold-pin.changed.md  +shell-tabs-docs.changed.md  +towncrier-bootstrap.added.md
chirp_shell_test/: app.py
chirp_shell_test/pages/: _context.py  _layout.html  page.html
docs/: ARD.md  PRD.md  TDD.md  benchmark-deep-dive.md  benchmark-plan.md  benchmark-pounce-chirp-deep-dive.md  error-handling.md  htmx-patterns.md  philosophy.md  plan-kida-ast-showcase.md  release-rough-edges.md
docs/deployment/: production.md
docs/rfcs/: 001-component-filter-contract.md
examples/: AUDIT.md  README.md  conftest.py
examples/accessibility/: README.md  app.py  test_app.py
examples/api/: README.md  app.py  test_app.py
examples/auth/: README.md  app.py  test_app.py
examples/chat/: README.md  app.py  test_app.py
examples/chirpui/: README.md
examples/contacts/: README.md  app.py  test_app.py
examples/contacts_shell/: README.md  app.py  contacts_shell_store.py  test_app.py
examples/custom_middleware/: README.md  app.py  test_app.py
examples/dashboard/: README.md  app.py
examples/dashboard_live/: README.md  app.py  conftest.py  dashboard.db  dashboard.db-shm  test_app.py
examples/form_get/: README.md
examples/hackernews/: README.md  app.py  test_app.py
examples/hello/: README.md  app.py  test_app.py
examples/islands/: README.md  app.py
examples/islands_shell/: README.md  app.py
examples/islands_swap/: README.md
examples/kanban/: README.md  app.py  test_app.py
examples/kanban_shell/: README.md  app.py  conftest.py  store.py  test_app.py
examples/llm_playground/: README.md  app.py  conftest.py  test_app.py
examples/llm_streaming_kida/: README.md
examples/ollama/: README.md  app.py  ollama_client.py  test_app.py
examples/oob_layout_chain/: README.md
examples/pages_shell/: README.md  app.py  test_app.py
examples/pokedex/: .env.example  README.md  app.py  pokedex.db
examples/production/: README.md  app.py  test_app.py
examples/rag_demo/: .env.example  README.md  app.py  conftest.py  docs.db  docs.db-shm  docs.db-wal  test_app.py
examples/search/: README.md  app.py
examples/shell_oob/: app.py
examples/signup/: .env.example  README.md  app.py  test_app.py
examples/sortable_reorder/: README.md  app.py  store.py  test_app.py
examples/sse/: README.md  app.py  test_app.py
examples/standalone/: README.md
examples/static_site/: README.md  app.py  test_app.py
examples/streaming/: README.md  app.py
examples/survey/: README.md  app.py  test_app.py
examples/theming/: README.md  app.py
examples/todo/: README.md  app.py  conftest.py  test_app.py  todo.db-shm
examples/tools/: README.md  app.py  test_app.py
examples/upload/: README.md  app.py  test_app.py
examples/wizard/: README.md  app.py  test_app.py
plan/drafted/: rfc-asgi-lifespan.md  rfc-cli-scaffolding.md  rfc-component-collection.md  rfc-contract-extensions.md  rfc-form-patterns.md  rfc-htmx-app-shell-extension.md  rfc-htmx4-alignment.md  rfc-implicit-fragment-resolution.md  rfc-per-worker-hooks.md  rfc-route-directory-contract.md  rfc-sse-scope-stability.md
plan/proposed/: kanban-shell-example.md
scripts/: oob_deep_dive.py
site/content/: _index.md
src/chirp/: __init__.py  app.py  config.py  context.py  contracts.py  domains.py  errors.py  extraction.py  health.py  logging.py  plugin.py  resilience.py  shell_actions.py  shell_regions.py  sources.py  testing.py
tests/: __init__.py  conftest.py  test_actions.py  test_allowed_hosts.py  test_alpine.py  test_app.py  test_app_bind_config.py  test_app_diagnostics.py  test_app_render.py  test_asgi.py  test_auth.py  test_auth_rate_limit.py  test_boost_layout.py  test_cache.py  test_chirpui_boundary.py  test_cli.py  test_cli_check.py  test_cli_new.py  test_cli_resolve.py  test_cli_run.py  test_composition_phase3.py  test_config.py  test_context.py  test_context_cascade.py  test_contracts.py  test_contracts_vary.py  test_cookies.py  test_cors.py  test_csp_nonce.py  test_csrf.py  test_data.py  test_debug_page.py  test_decorators.py  test_devtools.py  test_dori_patterns.py  test_errors.py  test_events.py  test_extraction.py  test_form_action.py  test_form_integration.py  (+66 more)
tests/contracts/: __init__.py  test_accessibility.py  test_checker_integration.py  test_commands.py  test_component.py  test_dead.py  test_forms.py  test_hypermedia.py  test_islands.py  test_page_context.py  test_page_shell.py  test_routes.py  test_selector.py  test_snapshot.py  test_sse.py  test_swap.py  test_template_scan.py
tests/helpers/: __init__.py  auth.py  contract_fixtures.py
tests/templates/: base.html  cart.html  child.html  dashboard.html  form.html  page.html  search.html  with_filter.html  with_global.html
tests/test_app/: __init__.py  test_config.py  test_e2e.py  test_freeze.py  test_lifespan.py  test_registration.py  test_service_injection.py  test_worker_lifecycle.py
tests/test_negotiation/: conftest.py  test_action.py  test_errors.py  test_layout_page.py  test_oob.py  test_passthrough.py  test_primitives.py  test_validation.py
tests/test_tools/: __init__.py  test_app_integration.py  test_events.py  test_mcp_handler.py  test_registry.py  test_schema.py
testv2/: app.py  models.py
testv2/pages/: _layout.html  page.html  page.py
testv2/static/: style.css
testv2/tests/: conftest.py  test_app.py
(+675 files in other folders)
